--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "framer-motion": "^12.23.26",
+    "gsap": "^3.14.2",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
+    "programming-languages-logos": "^0.0.3",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
